--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
     </div>
 
     <div class="container" id="iosContainer">
-        <h2>УДЕРДИВАЙТЕ ПАЛЕЦ НА ОТПЕЧАТКЕ ⬇️⬇️!</h2>
+        <h2>УДЕРЖИВАЙТЕ ПАЛЕЦ НА ОТПЕЧАТКЕ ⬇️⬇️!</h2>
         <p>ВЫБЕРИТЕ <strong>"ОТКРЫТЬ ССЫЛКУ"</strong></p>
         <a href="https://prev.affomelody.com/f6bUZz" target="_blank" class="link">
             <img class="fingerprint" src="https://so65a.github.io/2/1.png" alt="Отпечаток пальца">
